--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 	"require": {
 		"php": ">=5.3.7",
 		"vlucas/phpdotenv": "*",
-		"jenssegers/blade": "*"
+		"jenssegers/blade": "*",
+		"lulco/phoenix": "*"
+		
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
@@ -34,4 +36,7 @@
 		"mikey179/vfsstream": "1.6.*",
 		"phpunit/phpunit": "4.* || 5.* || 9.*"
 	}
+	
+	
 }
+
