--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"php": ">=5.3.7",
 		"vlucas/phpdotenv": "*",
 		"jenssegers/blade": "*",
-		"lulco/phoenix": "*"
+		"lulco/phoenix": "*",
+		"illuminate/database": "^8.3"
 		
 	},
 	"suggest": {
@@ -35,8 +36,12 @@
 	"require-dev": {
 		"mikey179/vfsstream": "1.6.*",
 		"phpunit/phpunit": "4.* || 5.* || 9.*"
+	},
+	"autoload": {
+		"psr-4": {
+			"Orm\\": "application/orm/"
+		}
+
 	}
 	
-	
 }
-
